removing dot env

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "stateofnouns",
-  "version": "1.0.0",
+  "name": "StateOfNouns",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "files": ["lib/**/*"],
   "scripts" : {
     "test" : "echo \"Error: no test specified\" && exit 1 ",
