--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "StateOfNouns",
-  "version": "0.0.1",
+  "name": "stateofnouns",
+  "version": "0.0.3",
   "description": "",
   "main": "./lib/index.js",
-  "files": ["lib/**/*"],
-  "scripts" : {
-    "test" : "echo \"Error: no test specified\" && exit 1 ",
-    "build" : "tsc"
+  "files": [
+    "lib/**/*"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1 ",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
   "homepage": "https://github.com/JoeCars/StateOfNouns#readme",
   "devDependencies": {
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@opensea/seaport-js": "^1.0.5"
   }
 }
