changed to 'nerman' and added contract calling functionality

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "stateofnouns",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "description": "",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
