--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stateofnouns",
-  "version": "0.0.9",
+  "name": "nerman",
+  "version": "0.0.1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -26,6 +26,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@nouns/contracts": "^0.3.0",
     "@opensea/seaport-js": "^1.0.5"
   }
 }
