--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/JoeCars/StateOfNouns#readme",
   "devDependencies": {
+    "@types/node-cron": "^3.0.7",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "@nouns/contracts": "^0.3.0",
-    "@opensea/seaport-js": "^1.0.5"
+    "@opensea/seaport-js": "^1.0.5",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.1"
   }
 }
