--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nerman",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoeCars/StateOfNouns.git"
+    "url": "git+https://github.com/JoeCars/Nerman.js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JoeCars/StateOfNouns/issues"
+    "url": "https://github.com/JoeCars/Nerman.js/issues"
   },
-  "homepage": "https://github.com/JoeCars/StateOfNouns#readme",
+  "homepage": "https://github.com/JoeCars/Nerman.js#readme",
   "devDependencies": {
     "@types/node-cron": "^3.0.7",
     "@types/node-fetch": "^2.6.4",
