Added documentation.js as dev dependency.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1 ",
-    "build": "tsc"
+    "build": "tsc",
+    "build-docs": "npx documentation build src/** --parse-extension ts -f md -o docs.md"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node-cron": "^3.0.7",
     "@types/node-fetch": "^2.6.4",
+    "documentation": "^14.0.2",
     "typescript": "^4.8.2"
   },
   "dependencies": {
