--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@prophouse/sdk": "^1.0.11",
     "ethers": "^5.7.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.11"
