--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/JoeCars/Nerman.js#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node-cron": "^3.0.7",
     "@types/node-fetch": "^2.6.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
