--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nerman",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@prophouse/sdk": "^1.0.11",
+    "@standard-crypto/farcaster-js-hub-rest": "^1.2.1",
     "ethers": "^5.7.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.11"
