--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.5.11",
 		"@types/node-cron": "^3.0.7",
+		"@types/node-fetch": "^2.6.11",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.1.1",
 		"typescript": "^5.3.3"
@@ -33,6 +34,6 @@
 		"@prophouse/sdk": "^1.0.11",
 		"ethers": "^6.10.0",
 		"node-cron": "^3.0.2",
-		"node-fetch": "^3.3.2"
+		"node-fetch": "^2.7.0"
 	}
 }
