--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 	},
 	"dependencies": {
 		"@prophouse/sdk": "^1.0.11",
-		"ethers": "^6.10.0",
+		"ethers": "^5.7.0",
+		"ethers-v6": "npm:ethers@^6.10.0",
 		"node-cron": "^3.0.2",
 		"node-fetch": "^2.7.0"
 	}
