feat: add alpha publishing script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	],
 	"scripts": {
 		"test": "npx jest",
-		"build": "tsc"
+		"build": "tsc",
+		"publish-alpha": "rm -rf ./lib && tsc && npm publish --tag alpha"
 	},
 	"repository": {
 		"type": "git",
